# PhotosCollector

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  collectphotos.py  package-lock.json  pyproject.toml
